antlr-generated/srcparser/AdaptablePEGParser.java
// $ANTLR 3.5 C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g 2013-02-12 12:54:00

    package srcparser;
    import semantics.*;
    import java.lang.reflect.Method;
    import java.lang.reflect.Modifier;
    import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class AdaptablePEGParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND_LOOKAHEAD", "ANY", "ARRAY_REF", 
		"ASSIGN", "ASSIGNLIST", "CALL", "CHOICE", "COMMENT", "COND", "DIGIT", 
		"DOT", "ESC", "EXPONENT", "FALSE", "FILES", "ID", "INT_NUMBER", "LAMBDA", 
		"LETTER", "LINE_COMMENT", "LIST", "LITERAL_CHAR", "NONTERM", "NOT_LOOKAHEAD", 
		"ONE_REPEAT", "OPTIONAL", "OP_ADD", "OP_AND", "OP_DIV", "OP_EQ", "OP_GE", 
		"OP_GT", "OP_LE", "OP_LT", "OP_MOD", "OP_MUL", "OP_NE", "OP_NOT", "OP_OR", 
		"OP_SUB", "RANGE", "RANGE_PAIR", "REAL_NUMBER", "REPEAT", "RULE", "SEQ", 
		"STRING_LITERAL", "TRUE", "UNARY_SUB", "VARDECL", "WS", "XDIGIT", "'&'", 
		"'('", "')'", "','", "'.'", "':'", "';'", "'='", "'?'", "'['", "']'", 
		"'apeg'", "'functions'", "'locals'", "'returns'", "'{'", "'{?'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int AND_LOOKAHEAD=4;
	public static final int ANY=5;
	public static final int ARRAY_REF=6;
	public static final int ASSIGN=7;
	public static final int ASSIGNLIST=8;
	public static final int CALL=9;
	public static final int CHOICE=10;
	public static final int COMMENT=11;
	public static final int COND=12;
	public static final int DIGIT=13;
	public static final int DOT=14;
	public static final int ESC=15;
	public static final int EXPONENT=16;
	public static final int FALSE=17;
	public static final int FILES=18;
	public static final int ID=19;
	public static final int INT_NUMBER=20;
	public static final int LAMBDA=21;
	public static final int LETTER=22;
	public static final int LINE_COMMENT=23;
	public static final int LIST=24;
	public static final int LITERAL_CHAR=25;
	public static final int NONTERM=26;
	public static final int NOT_LOOKAHEAD=27;
	public static final int ONE_REPEAT=28;
	public static final int OPTIONAL=29;
	public static final int OP_ADD=30;
	public static final int OP_AND=31;
	public static final int OP_DIV=32;
	public static final int OP_EQ=33;
	public static final int OP_GE=34;
	public static final int OP_GT=35;
	public static final int OP_LE=36;
	public static final int OP_LT=37;
	public static final int OP_MOD=38;
	public static final int OP_MUL=39;
	public static final int OP_NE=40;
	public static final int OP_NOT=41;
	public static final int OP_OR=42;
	public static final int OP_SUB=43;
	public static final int RANGE=44;
	public static final int RANGE_PAIR=45;
	public static final int REAL_NUMBER=46;
	public static final int REPEAT=47;
	public static final int RULE=48;
	public static final int SEQ=49;
	public static final int STRING_LITERAL=50;
	public static final int TRUE=51;
	public static final int UNARY_SUB=52;
	public static final int VARDECL=53;
	public static final int WS=54;
	public static final int XDIGIT=55;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public AdaptablePEGParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public AdaptablePEGParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return AdaptablePEGParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g"; }


	    
	    Grammar grammar;
	    NonTerminal currNT;
	    ArrayList<CommonTree> ntcalls;
	    boolean isAddingRules;
	    boolean isNewRule;
	    
	    private void verifNTCalls() {
	    	for (CommonTree tree : ntcalls) {
				// I suppose there are exactly 2 children:
				// - the name of the nonterminal
				// - the list of arguments
				SemanticNode sm = (SemanticNode) tree.getChild(0);
				String name = sm.getText();
				CommonTree args = (CommonTree) tree.getChild(1);
				NonTerminal nt = grammar.getNonTerminal(name);
				if (nt == null) {
					emitErrorMessage(sm.getToken(), "Nonterminal not found: " + name);
				} else {
					sm.setSymbol(nt);
					int i1 = nt.getNumParam() + nt.getNumRet();
					int i2 = args.getChildCount();
					if (i1 != i2) {
						emitErrorMessage(sm.getToken(),
						"Wrong number of arguments in nonterminal " + name);
					} else {
						for (int i = nt.getNumParam(); i < i1; ++i) {
							CommonTree t = (CommonTree) args.getChild(i);
							if (t.token.getType() != ID) {
								emitErrorMessage(sm.getToken(),
								"Arguments for synthesized attributes must be only an identifier");
							}
						}
					}
				}
			}
		}
	    
	    private boolean mMessageCollectionEnabled = false;
	    private List<String> mMessages;

	    /**
	     *  Switches error message collection on or of.
	     *
	     *  The standard destination for parser error messages is <code>System.err</code>.
	     *  However, if <code>true</code> gets passed to this method this default
	     *  behaviour will be switched off and all error messages will be collected
	     *  instead of written to anywhere.
	     *
	     *  The default value is <code>false</code>.
	     *
	     *  @param pNewState  <code>true</code> if error messages should be collected.
	     */
	    public void enableErrorMessageCollection(boolean pNewState) {
	        mMessageCollectionEnabled = pNewState;
	        if (mMessages == null && mMessageCollectionEnabled) {
	            mMessages = new ArrayList<String>();
	        }
	    }
	    
	    /**
	     *  Collects an error message or passes the error message to <code>
	     *  super.emitErrorMessage(...)</code>.
	     *
	     *  The actual behaviour depends on whether collecting error messages
	     *  has been enabled or not.
	     *
	     *  @param pMessage  The error message.
	     */
	     @Override
	    public void emitErrorMessage(String pMessage) {
	        if (mMessageCollectionEnabled) {
	            mMessages.add(pMessage);
	        } else {
	            super.emitErrorMessage(pMessage);
	        }
	    }
	    
	    /**
	     * O token passado como parâmetro (atributo token) é usado
	     * para adicionar a linha e coluna na mensagem de erro.
	     */
	    public void emitErrorMessage(Token t, String pMessage) {
	        emitErrorMessage("line " + t.getLine() + ":" + (t.getCharPositionInLine()+1) + " " + pMessage);
	    }
	        
	    /**
	     *  Tells if parsing has caused any error messages.
	     *
	     *  @return  <code>true</code> if parsing has caused at least one error message.
	     */
	    public boolean hasErrors() {
	        return mMessages != null && mMessages.size() > 0;
	    }
	    
	    public void printErrorMessages() {
	      for (String s : mMessages) {
	        System.out.println("  " + s);
	      }
	    }



	public static class grammarDef_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "grammarDef"
	// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:153:1: grammarDef[Grammar g] : 'apeg' ! ID ';' ! functions ( rule )+ ;
	public final AdaptablePEGParser.grammarDef_return grammarDef(Grammar g) throws RecognitionException {
		AdaptablePEGParser.grammarDef_return retval = new AdaptablePEGParser.grammarDef_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal1=null;
		Token ID2=null;
		Token char_literal3=null;
		ParserRuleReturnScope functions4 =null;
		ParserRuleReturnScope rule5 =null;

		CommonTree string_literal1_tree=null;
		CommonTree ID2_tree=null;
		CommonTree char_literal3_tree=null;

		try {
			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:153:23: ( 'apeg' ! ID ';' ! functions ( rule )+ )
			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:154:5: 'apeg' ! ID ';' ! functions ( rule )+
			{
			root_0 = (CommonTree)adaptor.nil();



			      grammar = g;
			      ntcalls = new ArrayList<CommonTree>();
			      isAddingRules = false;
			      isNewRule = true;
			    
			string_literal1=(Token)match(input,67,FOLLOW_67_in_grammarDef180); 
			ID2=(Token)match(input,ID,FOLLOW_ID_in_grammarDef183); 
			ID2_tree = (CommonTree)adaptor.create(ID2);
			adaptor.addChild(root_0, ID2_tree);

			char_literal3=(Token)match(input,62,FOLLOW_62_in_grammarDef185); 
			pushFollow(FOLLOW_functions_in_grammarDef192);
			functions4=functions();
			state._fsp--;

			adaptor.addChild(root_0, functions4.getTree());

			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:162:5: ( rule )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:162:5: rule
					{
					pushFollow(FOLLOW_rule_in_grammarDef198);
					rule5=rule();
					state._fsp--;

					adaptor.addChild(root_0, rule5.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}


			    	verifNTCalls();
			    
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "grammarDef"


	public static class functions_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "functions"
	// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:168:1: functions : ( 'functions' ( ID )+ ';' -> ^( FILES ( ID )+ ) | -> ^( FILES ) );
	public final AdaptablePEGParser.functions_return functions() throws RecognitionException {
		AdaptablePEGParser.functions_return retval = new AdaptablePEGParser.functions_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal6=null;
		Token ID7=null;
		Token char_literal8=null;

		CommonTree string_literal6_tree=null;
		CommonTree ID7_tree=null;
		CommonTree char_literal8_tree=null;
		RewriteRuleTokenStream stream_68=new RewriteRuleTokenStream(adaptor,"token 68");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");

		try {
			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:168:11: ( 'functions' ( ID )+ ';' -> ^( FILES ( ID )+ ) | -> ^( FILES ) )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==68) ) {
				alt3=1;
			}
			else if ( (LA3_0==ID) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:169:3: 'functions' ( ID )+ ';'
					{
					string_literal6=(Token)match(input,68,FOLLOW_68_in_functions220);  
					stream_68.add(string_literal6);

					// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:170:3: ( ID )+
					int cnt2=0;
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==ID) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:171:3: ID
							{
							ID7=(Token)match(input,ID,FOLLOW_ID_in_functions229);  
							stream_ID.add(ID7);


							      try {
							          Class c = Class.forName((ID7!=null?ID7.getText():null));
							          for (Method m : c.getDeclaredMethods()) {
							            if (grammar.addFunction(m) == null) {
							              emitErrorMessage(ID7, "Function name duplicated: " + m.getName() + " in file " + (ID7!=null?ID7.getText():null));
							            }
							          }
							        } catch (Exception e) {
							          emitErrorMessage(ID7, "File not found: " + (ID7!=null?ID7.getText():null));
							        }
							    
							}
							break;

						default :
							if ( cnt2 >= 1 ) break loop2;
							EarlyExitException eee = new EarlyExitException(2, input);
							throw eee;
						}
						cnt2++;
					}

					char_literal8=(Token)match(input,62,FOLLOW_62_in_functions244);  
					stream_62.add(char_literal8);

					// AST REWRITE
					// elements: ID
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 186:5: -> ^( FILES ( ID )+ )
					{
						// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:186:8: ^( FILES ( ID )+ )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FILES, "FILES"), root_1);
						if ( !(stream_ID.hasNext()) ) {
							throw new RewriteEarlyExitException();
						}
						while ( stream_ID.hasNext() ) {
							adaptor.addChild(root_1, stream_ID.nextNode());
						}
						stream_ID.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:188:5: 
					{
					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 188:5: -> ^( FILES )
					{
						// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:188:8: ^( FILES )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FILES, "FILES"), root_1);
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "functions"


	public static class addrules_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "addrules"
	// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:191:1: addrules[Grammar g] : ( rule )+ ;
	public final AdaptablePEGParser.addrules_return addrules(Grammar g) throws RecognitionException {
		AdaptablePEGParser.addrules_return retval = new AdaptablePEGParser.addrules_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope rule9 =null;


		try {
			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:191:21: ( ( rule )+ )
			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:192:2: ( rule )+
			{
			root_0 = (CommonTree)adaptor.nil();



					grammar = g;
					isAddingRules = true;
					ntcalls = new ArrayList<CommonTree>();
				
			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:197:2: ( rule )+
			int cnt4=0;
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ID) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:197:2: rule
					{
					pushFollow(FOLLOW_rule_in_addrules288);
					rule9=rule();
					state._fsp--;

					adaptor.addChild(root_0, rule9.getTree());

					}
					break;

				default :
					if ( cnt4 >= 1 ) break loop4;
					EarlyExitException eee = new EarlyExitException(4, input);
					throw eee;
				}
				cnt4++;
			}


					verifNTCalls();
				
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "addrules"


	public static class rule_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "rule"
	// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:204:1: rule : ID d1= optDecls[Attribute.Category.PARAM] d2= optReturn[Attribute.Category.RETURN] d3= optLocals[Attribute.Category.LOCAL] ':' t= peg_expr ';' -> ^( RULE ID $d1 $d2 $d3 peg_expr ) ;
	public final AdaptablePEGParser.rule_return rule() throws RecognitionException {
		AdaptablePEGParser.rule_return retval = new AdaptablePEGParser.rule_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID10=null;
		Token char_literal11=null;
		Token char_literal12=null;
		ParserRuleReturnScope d1 =null;
		ParserRuleReturnScope d2 =null;
		ParserRuleReturnScope d3 =null;
		ParserRuleReturnScope t =null;

		CommonTree ID10_tree=null;
		CommonTree char_literal11_tree=null;
		CommonTree char_literal12_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
		RewriteRuleTokenStream stream_61=new RewriteRuleTokenStream(adaptor,"token 61");
		RewriteRuleSubtreeStream stream_optReturn=new RewriteRuleSubtreeStream(adaptor,"rule optReturn");
		RewriteRuleSubtreeStream stream_peg_expr=new RewriteRuleSubtreeStream(adaptor,"rule peg_expr");
		RewriteRuleSubtreeStream stream_optDecls=new RewriteRuleSubtreeStream(adaptor,"rule optDecls");
		RewriteRuleSubtreeStream stream_optLocals=new RewriteRuleSubtreeStream(adaptor,"rule optLocals");

		try {
			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:218:3: ( ID d1= optDecls[Attribute.Category.PARAM] d2= optReturn[Attribute.Category.RETURN] d3= optLocals[Attribute.Category.LOCAL] ':' t= peg_expr ';' -> ^( RULE ID $d1 $d2 $d3 peg_expr ) )
			// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:219:3: ID d1= optDecls[Attribute.Category.PARAM] d2= optReturn[Attribute.Category.RETURN] d3= optLocals[Attribute.Category.LOCAL] ':' t= peg_expr ';'
			{
			ID10=(Token)match(input,ID,FOLLOW_ID_in_rule311);  
			stream_ID.add(ID10);


					if (isAddingRules) {
						currNT = grammar.getNonTerminal((ID10!=null?ID10.getText():null));
						if (currNT == null) {
							isNewRule = true;
							currNT = grammar.addNonTerminal((ID10!=null?ID10.getText():null));
						} else {
							isNewRule = false;
						}
					} else {
						currNT = grammar.addNonTerminal((ID10!=null?ID10.getText():null));
						if (currNT == null) {
							emitErrorMessage(ID10, "Symbol duplicated: " + (ID10!=null?ID10.getText():null));
						}
					}
				
			pushFollow(FOLLOW_optDecls_in_rule320);
			d1=optDecls(Attribute.Category.PARAM);
			state._fsp--;

			stream_optDecls.add(d1.getTree());
			pushFollow(FOLLOW_optReturn_in_rule327);
			d2=optReturn(Attribute.Category.RETURN);
			state._fsp--;

			stream_optReturn.add(d2.getTree());
			pushFollow(FOLLOW_optLocals_in_rule334);
			d3=optLocals(Attribute.Category.LOCAL);
			state._fsp--;

			stream_optLocals.add(d3.getTree());
			char_literal11=(Token)match(input,61,FOLLOW_61_in_rule339);  
			stream_61.add(char_literal11);

			pushFollow(FOLLOW_peg_expr_in_rule343);
			t=peg_expr();
			state._fsp--;

			stream_peg_expr.add(t.getTree());
			char_literal12=(Token)match(input,62,FOLLOW_62_in_rule347);  
			stream_62.add(char_literal12);

			// AST REWRITE
			// elements: d1, d3, d2, ID, peg_expr
			// token labels: 
			// rule labels: d1, retval, d2, d3
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_d1=new RewriteRuleSubtreeStream(adaptor,"rule d1",d1!=null?d1.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
			RewriteRuleSubtreeStream stream_d2=new RewriteRuleSubtreeStream(adaptor,"rule d2",d2!=null?d2.getTree():null);
			RewriteRuleSubtreeStream stream_d3=new RewriteRuleSubtreeStream(adaptor,"rule d3",d3!=null?d3.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 241:3: -> ^( RULE ID $d1 $d2 $d3 peg_expr )
			{
				// C:\\Users\\vladimir\\git\\APEG\\grammars\\AdaptablePEG.g:241:6: ^( RULE ID $d1 $d2 $d3 peg_expr )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(RULE, "RULE"), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_d1.nextTree());
